--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -388,12 +388,12 @@
 
     <!-- Paths to the libraries that contain device specific key handlers -->
     <string-array name="config_deviceKeyHandlerLibs" translatable="false">
-        <item>/system/priv-app/RealmeParts/RealmeParts.apk</item>
+        <item>/system/priv-app/KharaMeParts/KharaMeParts.apk</item>
     </string-array>
 
     <!-- Names of the key handler classes -->
     <string-array name="config_deviceKeyHandlerClasses" translatable="false">
-        <item>org.aospextended.device.KeyHandler</item>
+        <item>com.kharame.kharameparts.KeyHandler</item>
     </string-array>
 
     <!-- Whether device ignores the RSSNR signal implementation -->
