sdm710-common: remove dt2w from KharaMeParts
Signed-off-by: MadhavSaladi <baaswanthmadhav@gmail.com>
Signed-off-by: KrishWalecha <Krishwalecha098@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -408,4 +408,7 @@
     <!-- Whether device has VOOC charging support -->
     <bool name="config_hasVoocCharger">true</bool>
 
+    <!-- Whether device supports double tap to wake -->
+    <bool name="config_supportDoubleTapWake">true</bool>
+
 </resources>
